Visually improves the transition to the login page for an unauthenticated user (Fixes flickering effect)

--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,51 @@ body {
 }
 
 /* ==========================
+  Initial screen while authenticating and loaders
+========================== */
+
+.auth-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Initial loading spinner */
+.initial-loading-spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(0, 158, 219, 0.3);
+  border-radius: 50%;
+  border-top: 4px solid var(--primary-color);
+  animation: spin 1s linear infinite;
+}
+
+/* loading spinner after clicking the search button */
+#loader {
+  display: none;
+  margin: 20px auto;
+  width: 60px;
+  height: 60px;
+  border: 8px solid rgba(255, 255, 255, 0.1);
+  border-top: 8px solid var(--accent-color);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* ==========================
   Button styles
 ========================== */
 
@@ -213,25 +258,8 @@ input[type="search"]::placeholder {
 }
 
 /* ==========================
-  Loader & results
+  Results
 ========================== */
-
-#loader {
-  display: none;
-  margin: 20px auto;
-  width: 60px;
-  height: 60px;
-  border: 8px solid rgba(255, 255, 255, 0.1);
-  border-top: 8px solid var(--accent-color);
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 #resultsContainer {
   display: none;
